syntax = "proto3";

package mu;
option go_package = "github.com/Finciero/opendata/aries/mu";

service Service {
  rpc Auth (Request) returns (Response);
}

message Request {
  string partner_token = 1;
  string user_token = 1;
}

message Response {
  int32 status_code = 1;
  string message = 2;
  Balance balance = 3;
}

message Balance {
    int32 status_code = 1;
    float balance = 2;
}