syntax = "proto3";

package castor;
option go_package = "github.com/go-toschool/opendata/gemini/castor";

import "saga.proto";

service Service {
  rpc Card (Request) returns (Response);
}

message Card {
  string email = 1;
  string password = 2;
}

message Request {
  string client_id = 1;
  string user_id = 2;
  string reference_id = 3;
}

message Response {
  int32 status_code = 1;
  saga.Balance balance = 2;
}

message Account {
  string reference_id = 1;
  string reference_user_id = 2;
  string reference_email = 3;
}
